--- a/bankingcommonsrv/src/main/resources/application.properties
+++ b/bankingcommonsrv/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 #producer
-spring.kafka.producer.bootstrap-servers = kafkadevcluster-kafka-bootstrap-cloudpakint.ocp-cloud-pak-int-3c645fd7b49f3d8b01c56f19c950a5c3-0000.che01.containers.appdomain.cloud:443
+#spring.kafka.producer.bootstrap-servers = kafkadevcluster-kafka-bootstrap-cloudpakint.ocp-cloud-pak-int-3c645fd7b49f3d8b01c56f19c950a5c3-0000.che01.containers.appdomain.cloud:443
+spring.kafka.producer.bootstrap-servers = 172.30.104.77:9092
 #spring.kafka.producer.bootstrap-servers = 169.38.109.66:443
 #spring.kafka.producer.bootstrap-servers = localhost:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 
 #consumer
-spring.kafka.consumer.bootstrap-servers = kafkadevcluster-kafka-bootstrap-cloudpakint.ocp-cloud-pak-int-3c645fd7b49f3d8b01c56f19c950a5c3-0000.che01.containers.appdomain.cloud:443
+#spring.kafka.consumer.bootstrap-servers = kafkadevcluster-kafka-bootstrap-cloudpakint.ocp-cloud-pak-int-3c645fd7b49f3d8b01c56f19c950a5c3-0000.che01.containers.appdomain.cloud:443
+spring.kafka.consumer.bootstrap-servers = 172.30.104.77:9092
 #spring.kafka.consumer.bootstrap-servers = localhost:9092
 spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
@@ -40,3 +42,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.maxActive=5
 spring.datasource.max-active=5
+
+spring.datasource.url= jdbc:postgresql://rds-public-instance.c1c7k791bkyb.ap-south-1.rds.amazonaws.com:5432/dbtest_new
+spring.datasource.username= db_un1
+spring.datasource.password=Delta12345
